# cargo_auto_template_new_wasm

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  github_release_prepare.sh  temp9.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/cargo_auto_template_new_wasm/: all.html  enum.LibraryError.html  fn.wasm_bindgen_start.html  index.html  sidebar-items.js
docs/cargo_auto_template_new_wasm/main_mod/: fn.main.html  fn.on_click_btn_run.html  fn.page_with_inputs.html  fn.print_greet_name.html  fn.print_help.html  fn.remove_downloading_message.html  fn.upper_greet_name.html  index.html  sidebar-items.js
docs/cargo_auto_template_new_wasm/main_mod/lib_mod/: constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.LibraryError.html  index.html
docs/cargo_auto_template_new_wasm/wsm/: fn.add_listener_to_button.html  fn.debug_write.html  fn.get_element_by_id.html  fn.get_html_element_by_id.html  fn.get_input_element_value_string_by_id.html  fn.open_url_in_new_tab.html  fn.set_html_element_inner_html.html  fn.set_html_element_inner_text.html  fn.window.html  index.html
docs/search.desc/cargo_auto_template_new_wasm/: cargo_auto_template_new_wasm-desc-0-.js
docs/src/cargo_auto_template_new_wasm/: lib.rs.html  main_mod.rs.html
docs/src/cargo_auto_template_new_wasm/main_mod/: lib_mod.rs.html
docs/trait.impl/core/error/: trait.Error.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  (+3 more)
publish_script/: cargo_auto_template_new_wasm_publish.sh
src/: lib.rs  main_mod.rs
src/main_mod/lib_mod/: hello_mod.rs
(+18 files in other folders)
